fix(index): bump knowledge viewer filename to bust cache

--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ const INDEX_SOURCES={
   knowledge:"data/index/knowledge_index.md",
 };
 const VERIFY_LINKS={caitodo:'verify/?src=caitodo',zhaojing:'verify/?src=zhaojing',finance:'verify/?src=finance',personal:'verify/?src=personal',openclaw:'verify/?src=openclaw'};
-const INDEX_LINKS={customer:'index/customer.html',project:'index/project.html',knowledge:'index/knowledge.html'};
+const INDEX_LINKS={customer:'index/customer.html',project:'index/project.html',knowledge:'index/knowledge2.html'};
 
 function safeStr(v,fallback="-"){
   if(v===undefined||v===null) return fallback;
